--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="display"></div>
+        <input type="text" name="" id="display">
         <div class="buttons">
             <button id="clear" class="sign">AC</button>
             <button id="signs" class="sign">+/-</button>
@@ -24,7 +24,7 @@
             <button id="minus" class="operator">-</button>
             <button id="one" class="number">1</button>
             <button id="two" class="number">2</button>
-            <button id="3" class="number">3</button>
+            <button id="three" class="number">3</button>
             <button id="plus" class="operator">+</button>
             <button id="zero" class="number">0</button>
             <button id="dot">&#8226;</button>
