--- a/index.html
+++ b/index.html
@@ -3,34 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculator</title>
+    <title>www.calculater.com</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <input type="text" name="" id="display">
+        <div class="footer">
+            <p><b>calculater</b></p><a href="https://github.com/elvinmanzi02/Etch-a-Sketch.git" target="_blank" rel="noopener noreferrer">
+              <img src="https://github.com/fluidicon.png" alt="GitHub" width="10" height="10">
+            </a>
+          </div> 
+        <div id="display"></div>
         <div class="buttons">
             <button id="clear" class="sign">AC</button>
             <button id="signs" class="sign">+/-</button>
             <button id="percentage" class="sign">%</button>
             <button id="division" class="operator">/</button>
-            <button id="seven" class="number">7</button>
-            <button id="eight" class="number">8</button>
-            <button id="nine" class="number">9</button>
+            <button class="operand">7</button>
+            <button class="operand">8</button>
+            <button class="operand">9</button>
             <button id="times" class="operator">x</button>
-            <button id="four" class="number">4</button>
-            <button id="five" class="number">5</button>
-            <button id="six" class="number">6</button>
+            <button class="operand">4</button>
+            <button class="operand">5</button>
+            <button class="operand">6</button>
             <button id="minus" class="operator">-</button>
-            <button id="one" class="number">1</button>
-            <button id="two" class="number">2</button>
-            <button id="three" class="number">3</button>
+            <button class="operand">1</button>
+            <button class="operand">2</button>
+            <button class="operand">3</button>
             <button id="plus" class="operator">+</button>
-            <button id="zero" class="number">0</button>
+            <button class="operand" >0</button>
             <button id="dot">&#8226;</button>
             <button id="equal" >=</button>
         </div>
-    </div>
+    </div>   
     <script src="script.js"></script>
 </body>
 </html>
