--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="display"></div>
         <div class="buttons">
             <button id="clear" class="sign">AC</button>
-            <button id="signs" class="sign">+/-</button>
+            <button id="delete" class="sign">del</button>
             <button id="percentage" class="sign">%</button>
             <button id="division" class="operator">/</button>
             <button class="operand">7</button>
@@ -33,6 +33,7 @@
             <button id="plus" class="operator">+</button>
             <button class="operand" >0</button>
             <button id="dot">&#8226;</button>
+            <button id="signs" class="sign">+/-</button>
             <button id="equal" >=</button>
         </div>
     </div>   
